<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Car Cast Resurrected</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="forward">Forward</string>
    <string name="rewind">Rewind</string>
    <string name="media_channel_name">Car Cast Resurrected</string>
    <string name="media_channel_description">Media playback controls</string>
    <string name="notification_permission_title">Notification Permission Required</string>
    <string name="notification_permission_message">This app needs notification permission to show media playback controls. Please enable notifications in settings.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="download_episodes">Download episodes</string>
    <string name="settings">Settings</string>
    <string name="abort_download">Abort download</string>
    <string name="default_max_downloads_label">Default max downloads per podcast</string>
    <string name="max_downloads_label">Max episodes to downloads</string>
    <string name="playback_speed_label">Playback speed</string>
    <string name="rewind_seconds_label">Rewind skips back X seconds</string>
    <string name="forward_seconds_label">Forward skips ahead X seconds</string>
    <string name="save">Save</string>
    <string name="invalid_numbers">One of the number fields is invalid</string>
    <string name="settings_saved">Settings saved!</string>
    <string name="previous">Previous</string>
    <string name="pausePlay">Play/Pause</string>
    <string name="next">Next</string>
    <string name="import_opml">Import OPML</string>
    <string name="podcasts">Podcasts</string>
    <string name="episodes">Episodes</string>
    <string name="reset_to_demos">Reset to demos</string>
    <string name="export_opml">Export OPML</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="delete_all">Delete all</string>
    <string name="disable_podcast">Disable podcast</string>
    <string name="edit_podcast">Edit podcast</string>
    <string name="delete">Delete</string>
    <string name="podcast_url_label">Episode podcast URL:</string>
    <string name="test">Test</string>
    <string name="podcast_title">Podcast Title:</string>
    <string name="enabled">Enabled</string>
    <string name="delete_existing_podcasts_first">Delete existing podcasts first</string>
    <string name="clear_history">Clear download history</string>
    <string name="podcast_search">Podcast Search:</string>
    <string name="example_search_text">example: npr</string>
    <string name="no_episodes_text">No episodes downloaded. Use \"Podcasts\" or \"Download episodes\" from the menu</string>
    <string name="delete_episodes">Delete episodes</string>
    <string name="delete_after_listening">Delete episodes after listening</string>
</resources>
