<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BaseActivityLayout"
    tools:context=".EditPodcastActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Focus control container -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:padding="16dp">

            <TextView
                android:id="@+id/editUrlLabel"
                android:labelFor="@id/editUrl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/podcast_url_label"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editUrl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textUri"
                android:text="http://"
                app:layout_constraintTop_toBottomOf="@id/editUrlLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="Autofill,HardcodedText"  />

            <Button
                android:id="@+id/btnTestEditPodcast"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:text="@string/test"
                app:layout_constraintTop_toBottomOf="@id/editUrl"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/podcastTitleLabel"
                android:labelFor="@id/editTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/podcast_title"
                app:layout_constraintTop_toBottomOf="@id/btnTestEditPodcast"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:singleLine="true"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/podcastTitleLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="Autofill"  />

            <!-- Max downloads row -->
            <TextView
                android:id="@+id/maxDownloadsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_downloads_label"
                app:layout_constraintTop_toBottomOf="@id/editTitle"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/maxDownloadsSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:prompt="@string/default_max_downloads_label"
                app:layout_constraintTop_toTopOf="@id/maxDownloadsLabel"
                app:layout_constraintBottom_toBottomOf="@id/maxDownloadsLabel"
                app:layout_constraintStart_toEndOf="@id/maxDownloadsLabel"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="12dp" />

            <CheckBox
                android:id="@+id/checkboxEnabled"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/enabled"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/maxDownloadsLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btnSavePodcast"
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/checkboxEnabled"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
