<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BaseActivityLayout"
    tools:context=".PodcastSearchActivity">

    <TextView
        android:id="@+id/searchLabel"
        android:labelFor="@id/searchText"
        android:padding="5dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/podcast_search"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/searchText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/searchLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintTop_toBottomOf="@id/searchText"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/searchLabel2"
        android:padding="5dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/example_search_text"
        app:layout_constraintTop_toBottomOf="@id/searchText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/searchButton"
        app:layout_goneMarginEnd="8dp" />

    <ListView
        android:id="@+id/listViewResults"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchButton" />


</androidx.constraintlayout.widget.ConstraintLayout>
