<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BaseActivityLayout"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/label_max_downloads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:text="@string/default_max_downloads_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_max_downloads"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/label_max_downloads"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/label_max_downloads">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_max_downloads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:text="0"
            tools:ignore="Autofill,HardcodedText"  />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/label_playback_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:text="@string/playback_speed_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_max_downloads" />

    <Spinner
        android:id="@+id/spinner_playback_speed"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/label_playback_speed"
        app:layout_constraintTop_toBottomOf="@+id/layout_max_downloads" />

    <!-- Rewind -->

    <TextView
        android:id="@+id/label_rewind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:text="@string/rewind_seconds_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_playback_speed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_rewind"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_rewind"
        app:layout_constraintTop_toBottomOf="@id/spinner_playback_speed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_rewind_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:text="0"
            tools:ignore="Autofill,HardcodedText"  />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Forward -->

    <TextView
        android:id="@+id/label_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:text="@string/forward_seconds_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_rewind" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_forward"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_forward"
        app:layout_constraintTop_toBottomOf="@+id/layout_rewind">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_forward_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:text="0"
            tools:ignore="Autofill,HardcodedText"  />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Save -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/layout_forward"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
